# InSAR-PILOT

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  PLANS.md  README.md  README_EN.md  README_ZH.md  SECURITY.md  environment.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: TROUBLESHOOTING.md  USER_GUIDE.md  USER_GUIDE_EN.md  architecture.md  cli.md  design-system.md  index.md  installation.md  quickstart.md  troubleshooting.md  tutorial.md  ui-ux-redesign.md  user-guide.md
docs/en/: architecture.md  cli.md  index.md  installation.md  quickstart.md  troubleshooting.md  user-guide.md
src/insar_pilot/: __init__.py  bootstrap.py  launch.py
src/insar_pilot/app/: __init__.py  settings.py
src/insar_pilot/cli/: __init__.py  main.py  runner.py
src/insar_pilot/controllers/: __init__.py  download_coordinator.py
src/insar_pilot/domain/: __init__.py  project.py
src/insar_pilot/download/: __init__.py  credentials.py  dem_service.py  download_service.py  geometry.py  map_credentials.py  models.py  network.py  opentopography_credentials.py  orbit_service.py  project_importer.py  scene_filter.py  search_service.py  session_auth.py  storage.py  task_state.py  tile_proxy.py
src/insar_pilot/download/providers/: __init__.py  asf_provider.py
src/insar_pilot/i18n/: __init__.py  translator.py
src/insar_pilot/i18n/locales/: __init__.py  en.json  zh.json
src/insar_pilot/services/: __init__.py  aoi_import.py  dem_coverage.py  dem_preparer.py  env_probe.py  input_catalog.py  iw_recommendation.py  output_discovery.py  preflight.py  project_store.py  run_executor.py  runfile_plan.py  shell.py  stack_generator.py  visualization_service.py
src/insar_pilot/ui/: download_worker.py  icons.py  main_window.py  theme.py
src/insar_pilot/ui/assets/: __init__.py
src/insar_pilot/ui/controllers/: __init__.py  download_controller.py  results_controller.py  run_controller.py  setup_controller.py
src/insar_pilot/ui/pages/: aoi_iw_page.py  data_download_page.py  data_sources_page.py  processing_plan_page.py  processing_setup_page.py  project_start_page.py  results_page.py  run_monitor_page.py
src/insar_pilot/ui/pages/data_download/: __init__.py  actions_section.py  base.py  credentials_section.py  page.py  results_panel.py  scroll_filter.py  search_section.py  workspace_section.py
src/insar_pilot/ui/styles/: __init__.py  base.py  components.py  status.py  tokens.py  widgets.py
src/insar_pilot/ui/widgets/: collapsible_section.py  combo_wheel_guard.py  command_preview.py  footprint_map.py  geometry_verify_panel.py  log_console.py  page_scaffold.py  parameter_grid.py  path_picker_row.py  preflight_check_list.py  preview_panel.py  property_form.py  run_step_monitor.py  status_badge.py  summary_card.py  task_progress_panel.py  technical_details_panel.py  top_workflow_stepper.py  wizard_action_bar.py  workflow_nav_item.py  workflow_step_tree.py
src/insar_pilot/ui/widgets/assets/: __init__.py
src/isce2_gui/: __init__.py  app.py  bootstrap.py
src/isce2_gui/domain/: project.py
src/isce2_gui/services/: __init__.py  aoi_import.py  command_plan.py  dem_coverage.py  dem_preparer.py  env_probe.py  input_catalog.py  iw_recommendation.py  output_discovery.py  project_store.py  run_executor.py  shell.py  stack_generator.py  visualization_service.py
src/isce2_gui/ui/: __init__.py  main_window.py  theme.py
src/isce2_gui/ui/pages/: aoi_iw_page.py  data_sources_page.py  processing_plan_page.py  results_page.py  run_monitor_page.py
src/isce2_gui/ui/widgets/: collapsible_section.py  geometry_verify_panel.py  path_picker_row.py  preview_panel.py  status_badge.py  summary_card.py  workflow_nav_item.py
tests/: conftest.py  test_aoi_import.py  test_branding.py  test_cli.py  test_credentials.py  test_dem_coverage.py  test_dem_preparer.py  test_download_controller.py  test_download_module.py  test_env_probe.py  test_i18n.py  test_input_catalog.py  test_iw_recommendation.py  test_launch.py  test_network.py  test_orbit_service.py  test_output_discovery.py  test_preflight.py  test_project_store.py  test_run_executor.py  test_runfile_plan.py  test_session_auth.py  test_shell.py  test_stack_generator.py  test_theme.py  test_tile_proxy.py  test_ui_phase3.py  test_visualization_service.py
