[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insar-pilot"
version = "1.0.0"
description = "Open desktop workbench for guided SAR/InSAR processing on Ubuntu and WSL."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  {name = "InSAR-PILOT Contributors"},
]
keywords = ["insar", "sar", "sentinel-1", "topsstack", "pyside6", "wsl"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "asf-search>=12.0",
  "PySide6>=6.6",
  "pyshp>=2.3",
  "qtawesome>=1.4,<2",
  "requests>=2.31",
  "sentineleof>=0.11.1",
]

[project.urls]
Homepage = "https://github.com/WU-Pengzhan/InSAR-PILOT"
Source = "https://github.com/WU-Pengzhan/InSAR-PILOT"
Issues = "https://github.com/WU-Pengzhan/InSAR-PILOT/issues"

[project.optional-dependencies]
map = [
  "PySide6-Addons>=6.6",
]
dev = [
  "pytest>=7.4",
  "ruff",
  "build",
]

[project.scripts]
insar-pilot = "insar_pilot.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"insar_pilot.ui.assets" = ["*.png"]
"insar_pilot.ui.widgets.assets" = ["*.css", "*.js"]
"insar_pilot.i18n.locales" = ["*.json"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# footprint_map.py embeds a Leaflet HTML/JS template as a string literal: its body
# is tab-indented (E101 mixed spaces/tabs) and has long JS lines (E501). Both flag
# the embedded template, not Python, and cannot be wrapped without changing output.
"src/insar_pilot/ui/widgets/footprint_map.py" = ["E101", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["insar_pilot.services", "insar_pilot.domain", "insar_pilot.download"]

[tool.coverage.report]
show_missing = true
skip_covered = true
